Supercluster/Cluster01/ProxyServer001/Namespace.yaml
############################
# @author Elias De Hondt   #
# @see https://eliasdh.com #
# @since 24/11/2024        #
############################
---
apiVersion: v1
kind: Namespace
metadata:
  name: proxyserver001
  labels:
    name: proxyserver001
    app: proxyserver001
    owner: EliasDH
    environment: production
  annotations:
    description: This namespace is used for the proxyserver001 application.
    contact: info@eliasdh.com
---
