Supercluster/Cluster01/ProxyServer001/Service.yaml
############################
# @author Elias De Hondt   #
# @see https://eliasdh.com #
# @since 24/11/2024        #
############################
---
apiVersion: v1
kind: Service
metadata:
  name: proxyserver001-service
  namespace: proxyserver001
spec:
  type: ExternalName
  externalName: 192.168.1.103
---
