Supercluster/Cluster01/ProxyServer001/Ingress.yaml
############################
# @author EliasDH Team     #
# @see https://eliasdh.com #
# @since 01/01/2025        #
############################
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxyserver001-ingress
  namespace: proxyserver001
  annotations:
    cert-manager.io/issuer: "proxyserver001-letsencrypt-issuer"
    nginx.ingress.kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/upstream-vhost: "192.168.1.103"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - levelup.eliasdh.com
      secretName: levelupeliasdh-tls
  rules:
    - host: levelup.eliasdh.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: proxyserver001-service
                port:
                  number: 80
---
